Archivos experiencia.html con el codigo terminado

--- a/experiencia.html
+++ b/experiencia.html
@@ -1,16 +1,184 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html lang ="es">
+    <!--Hola Chicos de Next U, este es el codigo de mi pagina.-->
     <head>
-        <title>TODO supply a title</title>
+        <link rel="icon" type="image/jpg" href="img/tp.jpg" />
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <title>Experiencia // Luis Medina S.</title>
+        <!--en las lineas de abajo coloco las fuentes de los estilos CSS de bootstrap y el segundo es pare personalizar bootstrap-->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
-        <div>TODO write content</div>
+        <!--Esta barra de navegacion me gusta, al estilo de muchas paginas actuales, usando bootstrap y jquery-->
+        <nav class="navbar navbar-default navbar-static-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-control="navbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!--Estoy metiendo el codigo del logo SVG-->
+                    <svg version="1.1" id="logo_lm_sdg" width="150px" height="200px" viewBox="0 0 1063 862" xml:space="preserve">
+                    <path fill="black" d="M613.576,641.155c-0.615-1.534-1.205-2.85-1.676-4.206
+                          c-10.469-30.202-21.064-60.361-31.357-90.623c-38.401-112.897-77.589-225.521-116.784-338.144
+                          c-18.499-53.153-37.154-106.252-55.549-159.441c-1.638-4.735-3.919-6.21-8.914-6.228c-25.983-0.091-51.961,0.221-77.956-0.474
+                          c-32.644-0.872-65.326-0.333-97.991-0.385c-6.664-0.011-6.827,0.03-6.671,6.55c0.651,27.146,1.335,54.29,2.146,81.431
+                          c1.219,40.791,2.575,81.578,3.835,122.368c0.788,25.475,1.42,50.953,2.279,76.425c1.156,34.274,2.771,68.536,3.602,102.817
+                          c0.594,24.477,1.348,48.948,1.955,73.423c0.73,29.464,2.052,58.902,3.011,88.354c0.763,23.46,1.324,46.93,2.004,70.395
+                          c0.67,23.137,1.421,46.274,1.989,69.411c0.76,30.965,1.565,61.92,3.115,92.855c0.374,7.464,0.387,7.787,8.166,7.639
+                          c25.122-0.479,50.213-1.808,75.317-2.786c26.922-1.05,53.85-1.971,80.771-3.106c15.951-0.672,31.907-1.332,47.859-1.918
+                          c23.767-0.872,47.524-1.779,71.273-3.086c12.727-0.701,13.24-0.541,9.592-12.599c-10.847-35.843-24.011-70.91-36.235-106.293
+                          c-0.888-2.57-2.494-3.093-4.954-3.001c-10.314,0.387-20.634,0.506-30.954,0.924c-29.113,1.179-58.259,1.594-87.392,2.262
+                          c-6.017,0.138-6.571-0.461-6.689-6.446c-0.232-11.652-0.555-23.312-0.781-34.951c-0.677-34.794-1.016-69.593-2.181-104.381
+                          c-0.636-18.975-0.304-37.966-0.798-56.96c-0.861-33.125-1.308-66.265-2.126-99.398c-0.975-39.476-1.016-78.975-1.434-118.463
+                          c-0.015-1.366-0.433-2.849,0.691-4.566c0.728,1.75,1.347,3.085,1.848,4.464c29.464,81.159,58.94,162.314,88.367,243.487
+                          c34.921,96.332,69.85,192.662,104.556,289.072c1.947,5.408,5.039,6.619,9.713,5.604c8.042-1.748,16.225-0.882,24.33-1.586
+                          c16.887-1.466,33.904-1.353,50.83-2.466c6.146-0.404,12.291-0.553,18.432-0.906c4.71-0.271,7.896-1.657,9.804-7.06
+                          c20.435-57.865,41.2-115.614,61.962-173.363c33.974-94.498,68.011-188.973,102.024-283.457
+                          c4.822-13.395,9.659-26.784,14.963-41.488c0.225,12.797-0.292,24.103-0.516,35.417c-0.824,41.646-1.381,83.297-2.027,124.946
+                          c-0.711,45.814-1.299,91.632-2.159,137.443c-0.457,24.323-0.028,48.646-0.71,72.975c-0.96,34.305-0.859,68.64-1.654,102.951
+                          c-0.173,7.471,1.803,13.563,6.116,19.404c2.176,2.948,4.396,4.514,8.209,4.432c11.827-0.255,23.662-0.154,35.492-0.27
+                          c2.57-0.024,4.635,0.724,6.957,1.98c3.499,1.895,7.996,2.931,11.596,1.284c2.426-1.108,4.308-1.99,6.861-1.291
+                          c1.086,0.297,2.675,0.9,3.163-0.415c1.263-3.404,4.142-2.331,6.369-2.424c11.981-0.5,23.971-0.932,35.96-1.07
+                          c4.881-0.057,6.746-1.984,6.874-6.834c0.312-11.822,0.411-23.646,0.877-35.472c1.339-33.956,2.128-67.933,3.125-101.902
+                          c0.973-33.135,1.937-66.271,2.904-99.406c1.016-34.8,2.028-69.601,3.047-104.4c1.004-34.299,2.014-68.599,3.018-102.897
+                          c1.009-34.464,2.083-68.927,3.001-103.393c0.852-31.973,1.226-63.961,2.44-95.919c0.494-12.99,0.438-25.983,1.002-38.96
+                          c0.976-22.467,1.503-44.94,1.83-67.424c0.053-3.673-1.324-4.936-4.969-4.958c-11.823-0.073-23.645-0.581-35.469-0.637
+                          c-38.165-0.182-76.331-0.245-114.497-0.316c-2.487-0.004-4.974,0.413-7.464,0.454c-4.354,0.07-6.183,2.478-7.556,6.443
+                          c-32.054,92.539-64.294,185.014-96.382,277.54c-35.497,102.355-70.873,204.753-106.339,307.118
+                          C615.994,637.2,615.812,639.475,613.576,641.155z"/>
+                    </svg>
+                </div>
+                <!--Aquí coloco tambien los enlaces del menú, en listas desordenadas-->
+                <div id="navbar" class="navbar-collapse collapse" >
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.html" >Inicio</a></li>
+                        <li><a href="educacion.html">Educación</a></li>
+                        <li><a href="experiencia.html">Experiencia</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!--El titulo en una etiqueta H1-->
+        <div class="container">
+            <div class="jumbotron ">
+                <h1>Curriculum Vitae</h1>
+            </div>
+        </div>
+        <!--Datos Personale en etiquetas h2 y h3-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">    
+                    <div class="row">
+                        <div class="col-md12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Datos personales  
+                                </div>
+                                <div class="panel-body">
+                                    <h2><span class="glyphicon glyphicon-glyphicon glyphicon-user" aria-hidden="true"></span> Luis Medina Sánchez</h2>
+                                    <h3><span class="glyphicon glyphicon-glyphicon glyphicon-calendar" aria-hidden="true"></span> 20 de agosto de 1989</h3>
+                                    <h3><span class="glyphicon glyphicon-glyphicon glyphicon-map-marker" aria-hidden="true"></span> Lugar de nacimiento: Leon de los aldamas, Gustavo A. Madero.</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <span class="glyphicon glyphicon-time" aria-hidden="true"></span> Acerca de...  
+                        </div>
+                        <div class="panel-body">
+                            <ul>
+                                <li>
+                                    <a href="index.html" >Inicio</a>
+                                </li>
+                                <li>
+                                    <a href="educacion.html">Educacion</a>
+                                </li>
+                                <li>
+                                    <a href="experiencia.html">Experiencias</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>    
+                </div>
+            </div>
+        </div>
+
+        <!--Mis videos con el titulo en h2-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-4">    
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h2>Experiencia</h2>
+                        </div>
+                        <div class="panel-body">
+                            <p>Mis habilidades</p>
+                            <p>
+                                <video controls poster="img/lm_3d.jpg" width="300" height="300">
+                                    <source src="video/secuencia01.webm" type="video/webm">
+                                    <source src="video/secuencia01.ogg" type="video/ogg">
+                                    <source src="video/secuencia01.flv" type="video/flv">
+                                    <source src="video/secuencia01.mp4" type="video/mp4">
+                                    <source src="video/secuencia01.swf" type="video/swf">
+                                    Tu navegador no soporta los formatos de video
+                                </video>
+                            </p>
+                            <p>
+                                Mis hobbies
+                            </p>
+                            <p>
+                                <audio controls>
+                                    <source src="audio/song.mp3" type="audio/mp3">
+                                    Lo siento, pero tu browser no soporta audio
+                                </audio>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+
+        <!--Pie de pagina con informacion de contacto-->
+        <footer>
+            <div class="container">
+                <div class="jumbotron">
+                    <div class="row">
+                        <div class="col-md-8">    
+                            <div class="row">
+                                <div class="col-md12"><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span> Contacto  
+                                    <h3><span class="glyphicon glyphicon-glyphicon glyphicon-user" aria-hidden="true"></span> Luis Medina Sánchez</h3>
+                                    <h4><span class="glyphicon glyphicon-glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valle de Castellbo No. 43, Col. Valle de Aragón, C.P. 57100, Nezahualcóyotl Edo de Mex.</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="panel-heading">
+                                <span class="glyphicon glyphicon-console" aria-hidden="true"></span> Telefonos 
+                            </div>
+                            <ul>
+                                <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 6304 2447</li>
+                                <li><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> 55 4332 0149</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </footer>
+
+        <script src="js/jquery.min.js"></script>       
+        <script src="js/bootstrap.min.js"></script>
+
     </body>
 </html>
