--- a/experiencia.html
+++ b/experiencia.html
@@ -92,7 +92,7 @@
                 <div class="col-md-3">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <span class="glyphicon glyphicon-time" aria-hidden="true"></span> Acerca de...  
+                            <span class="glyphicon glyphicon-link" aria-hidden="true"></span> Enlaces...  
                         </div>
                         <div class="panel-body">
                             <ul>
